<resources>
    <string name="app_name">ApplicationProject</string>
    <string name="menu_first_text">FORM LİSTESİ OLUŞTUR</string>
    <string name="menu_second_text">FORMU LİSTELE</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="Open">Açık</string>
    <string name="Close">Kapalı</string>
    <string name="recyclerView_item_customername_hint">LÜTFEN AD VE SOYADINIZI GİRİNİZ</string>
    <string name="button_birthday">Doğum Tarihinizi Seçiniz</string>
    <string name="radiobutton_male">Male</string>
    <string name="radiobutton_female">Female</string>
    <string name="phonenumber_hint">Lütfen telefon numaranızı giriniz</string>
    <string name="vadelihesap">VADELİ HESAP</string>
    <string name="vadesizhesap">VADESİZ HESAP</string>
    <string name="fonhesabı">FON HESABI</string>
    <string name="altındövizhesabı">ALTIN DÖVİZ HESABI</string>
    <string name="yatırımhesabı">YATIRIM HESABI</string>
    <string name="birthday">Doğum Tarihiniz : </string>
    <string name="button_save">FORMU KAYDET</string>
    <string name="fillingoutform">BOŞLUKLARI DOLDURUNUZ</string>
    <string name="male">ERKEK</string>
    <string name="female">BAYAN</string>
    <string name="sharedprefencesfile">customersss</string>
    <string name="sharedpreferenceskey">customer</string>
    <string name="selectPicture">Lütfen Resim Seçiniz</string>
    <string name="allAccountsName">VADELİ/VADESİZ HESAPLAR</string>
    <string name="selectAccount">HESAP SEÇİNİZ</string>
    <string name="invalidPhoneNumber">TELEFON NUMARASI GEÇERSİZ</string>
    <string name="contractPage">SÖZLEŞMEYİ KABUL ETMEK İÇİN TIKLAYINIZ</string>
    <string name="contactDetailText">6698 sayılı Kişisel Verilerin Korunması Kanunu kapsamında kişisel verilerinizin işlenmesinden
        doğan haklarınıza ve konu hakkındaki detaylı bilgiye Bankamız Aydınlatma metninden ulaşabilirsiniz.</string>
    <string name="bringContractPageText">KVKK Aydınlatma Metnini Okudum.</string>
    <string name="contractBiometricText">BİYOMETRİK VERİ</string>
    <string name="bringContractPageBiometricDataConfirmation">"Müşteri Olma hizmetimizden faydalanabilmeniz için,6698 Sayılı Kişisel Verilerin Korunması Kanununun 6.maddesine göre özel nitelikli veriniz olan yüz izleriniz işlenecektir. \n Hizmetimizden faydalanabilmeniz için özel nitelikli biyometrik verinizin Bankamızca işlenmesine açık rızanızı rica ederiz."</string>
    <string name="contractPageConfirmationActive">ONAYLA</string>
    <string name="contractPageConfirmationPassive">VAZGEÇ</string>
    <string name="contractPageSwitchCheckText">SÖZLEŞME ONAYI İÇİN KVKK METNİNİ VE BİYOMETRİK VERİYİ KABUL ETMENİZ GEREKMEKTEDİR.</string>
    <string name="contractPageSwitchCheckAccept">TAMAM</string>
    <string name="confirmationPageCustomerNameandSurname">AD SOYAD</string>
    <string name="confirmationPageCustomerBirthday">DOĞUM TARİHİ</string>
    <string name="confirmationPageCustomerGender">CİNSİYET</string>
    <string name="confirmationPageCustomerPicture">PROFİL RESMİ</string>
    <string name="confirmationPageCustomerPhoneNumber">TELEFON NUMARASI</string>
    <string name="confirmationPageCustomerAccountInfo">HESAP BİLGİLERİ</string>
    <string name="confirmationPageCustomerAccountType">HESAP TİPİ</string>
    <string name="confirmationPageCustomerFinish">ONAYLA</string>
    <string name="confirmationPageCustomerGiveup">VAZGEÇ</string>
</resources>