<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/recyclerView_item_customername_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonBirthay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            android:text="@string/button_birthday" />

        <TextView
            android:id="@+id/textviewbirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:visibility="gone" />

        <DatePicker
            android:id="@+id/datePickerBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonCustomerİmage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue"
            android:text="@string/selectPicture"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageViewCustomerPicture"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:id="@+id/fragmentTextViewCustomerAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:layout_marginTop="@dimen/dimen10"
            android:text="@string/selectAccount"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen20" />

        <TextView
            android:id="@+id/fragmentTextViewSelectedCustomerAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen10"
            android:background="@color/blue"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen20"
            android:visibility="gone"
            tools:text="SEÇİLEN HESAP" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkboxContractPageCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/fragmentTextViewContractPage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen10"
                android:background="@color/blue"
                android:text="@string/contractPage"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen20" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen10">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/radiobutton_male"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:checked="false"
                android:text="@string/radiobutton_female"
                android:textSize="20dp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/depositAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vadelihesap" />

            <CheckBox
                android:id="@+id/checkingAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vadesizhesap" />

            <CheckBox
                android:id="@+id/fundAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fonhesabı" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/dollarGoldAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/altındövizhesabı" />

            <CheckBox
                android:id="@+id/savingsAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yatırımhesabı" />


        </LinearLayout>

        <com.baris.applicationproject.customviews.PhoneCustomView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/formSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/deneme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="deneme" />

    </LinearLayout>

</ScrollView>