<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/dimen20">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmationPageCustomerNameandSurname"/>

        <TextView
            android:id="@+id/textViewConfirmationCustomerNameAndSurname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10"
            tools:text="AD SOYAD_CEVAP"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmationPageCustomerBirthday"/>

        <TextView
            android:id="@+id/textViewConfirmationCustomerBirthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20"
            tools:text="DOĞUM TARİHİ_CEVAP"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmationPageCustomerAccountInfo"/>

        <TextView
            android:id="@+id/textViewConfirmationCustomerAccountInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10"
            tools:text="HESAP BİLGİLERİ CEVAP" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmationPageCustomerGender"/>

        <TextView
            android:id="@+id/textViewConfirmationCustomerGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10"
            android:text="CİNSİYET CEVAP"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen10">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmationPageCustomerPicture"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageViewConfirmationCustomerPicture"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:layout_marginStart="@dimen/dimen10"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen10">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmationPageCustomerPhoneNumber"/>

        <TextView
            android:id="@+id/textViewConfirmationCustomerPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10"
            tools:text="TELEFON NUMARASI CEVAP"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmationPageCustomerAccountType"/>

        <TextView
            android:id="@+id/textViewConfirmationCustomerAccountType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen10"
            tools:text="HESAP TİPİ CEVAP"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen10"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonConfirmationCustomerFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:text="@string/confirmationPageCustomerFinish"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonConfirmationCustomerGiveup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen20"
            style="@style/Button"
            android:text="@string/confirmationPageCustomerGiveup"/>

    </LinearLayout>
    </LinearLayout>
</ScrollView>